<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Batsman"
    android:background="@color/back"


    >

    <TextView
        android:layout_marginTop="25sp"
        android:layout_marginStart="10sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team1forbat"
        android:textStyle="bold"
        android:textSize="24sp"/>
    <Spinner
        android:background="@drawable/border"
        android:id="@+id/spinner1"
        android:layout_marginTop="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        />
    <TextView
        android:layout_marginTop="25sp"
        android:layout_marginStart="10sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team2forbat"
        android:textStyle="bold"
        android:textSize="24sp"/>
    <Spinner
        android:background="@drawable/border"
        android:id="@+id/spinner2"
        android:layout_marginTop="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/findbats"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:id="@+id/b1"
        android:onClick="submit1"
        />

    <!--TextView
        android:id="@+id/tvResulw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="here result will appear"
        android:textAlignment="center"
        android:textSize="18sp" /><!-->

</LinearLayout>